--- a/app/src/main/res/layout/activity_juego_configuracion.xml
+++ b/app/src/main/res/layout/activity_juego_configuracion.xml
@@ -160,6 +160,32 @@
             android:layout_width="0dp"
             android:text="0"
             android:layout_height="match_parent" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/tiempoDesc"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textSize="20dp"
+                android:visibility="gone"
+                android:textColor="@color/colorAccent"
+                android:layout_width="0dp"
+                android:text="0"
+                android:layout_height="match_parent" />
+
+            <Chronometer
+                android:id="@+id/tiempoAsc"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:visibility="gone"
+                android:layout_height="match_parent" />
+
+
+        </LinearLayout>
+
         <TextView
             android:id="@+id/nombreJ2"
             android:layout_weight="1"
