--- a/app/src/main/res/layout/activity_configuracion.xml
+++ b/app/src/main/res/layout/activity_configuracion.xml
@@ -58,7 +58,7 @@
         android:background="@drawable/texto"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
-        android:visibility="invisible"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
