--- a/app/src/main/res/layout/activity_juego_configuracion.xml
+++ b/app/src/main/res/layout/activity_juego_configuracion.xml
@@ -36,10 +36,11 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:gravity="center"
             android:lineSpacingExtra="24sp"
             android:textColor="@android:color/background_light"
             android:textStyle="bold"
-            android:typeface="serif"
+            android:typeface="normal"
             android:visibility="gone" />
 
 
